Remove unnecessary `--add-exports` options.